envoy.yaml
static_resources:
  listeners:
    - name: listener_3030
      address:
        socket_address: { address: 0.0.0.0, port: 3030 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              config:
                codec_type: AUTO
                stat_prefix: chat_http
                route_config:
                  name: chat_route
                  virtual_hosts:
                    - name: chat_services
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/send-message" }
                          route:
                            cluster: chat_cluster
                        - match: { prefix: "/ws" }
                          route:
                            cluster: chat_cluster
                http_filters:
                  - name: envoy.filters.http.router

    - name: listener_3300
      address:
        socket_address: { address: 0.0.0.0, port: 3300 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              config:
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: services
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: backend_cluster
                http_filters:
                  - name: envoy.filters.http.router

  clusters:
    - name: chat_cluster
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: chat_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: chat-service-3301
                      port_value: 3031
              - endpoint:
                  address:
                    socket_address:
                      address: chat-service-3302
                      port_value: 3032
              - endpoint:
                  address:
                    socket_address:
                      address: chat-service-3303
                      port_value: 3033

    - name: backend_cluster
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: backend_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      { address: chat-backend-3300, port_value: 3300 }
